[issue-2] first pass on IE support
gitignore to-be-generated files and directories
add an npm script to prepare assets for IE
add postcss, postcss-css-variables, postcss-preset-env, svg-url-loader, url-loader, img-loader, fs-extra, es6-promise, and @patternfly/patternfly-next
add import for new ie css file
add shims for all the things
add support for svg images
add support for svg fonts
add support for generic image types

--- a/src/App/app.css
+++ b/src/App/app.css
@@ -1,12 +1,13 @@
 :root {
-  --myApp-global--spacer--md: 30px;
+  /* --myApp-global--spacer--md: 30px; */
 }
 
 .app-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: var(--myApp-global--spacer--md);
+  /* margin-top: var(--myApp-global--spacer--md); */
+  margin-top: 30px;
 }
 
 .notification-container {
